--- a/src/Styles/Tailwind.css
+++ b/src/Styles/Tailwind.css
@@ -1,3 +1,18 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+
+  body {
+  
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      height: 100vh;
+      background-color: #303030;
+
+    
+  }
+  
