--- a/frontend/src/Styles/Tailwind.css
+++ b/frontend/src/Styles/Tailwind.css
@@ -15,4 +15,21 @@
 
     
   }
+
+
+  .genbutton {
+    display: flex;  
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .selectbut {
+
+    display: flex;
+    align-items: center;
+
+
+
+  }
   
